--- a/media-query/media-query.html
+++ b/media-query/media-query.html
@@ -21,7 +21,7 @@
 
     <section class="landing">
       <h1 class="landing-title">
-        <strong lang="ko" class="landing-start">Responsibility and Safty</strong>
+        <strong lang="ko" class="landing-start">Responsibility and Safety</strong>
         박봉곤의<br />
         녹색어머니회<br />
         #안전하게<br />
